--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
-        <div class="title">Simple Day and Night Cycle</div>
+        <div class="title">Pirate RTS Game Demo</div>
       </div>
     </div>
   </body>
